--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "tachyons": "^4.11.1",
     "web-vitals": "^0.2.4"
   },
